First version of McRaptor

--- a/Raptor/Makefile
+++ b/Raptor/Makefile
@@ -6,8 +6,11 @@ EXEC=raptor
 
 all: mkdir $(EXEC)
 
-raptor: main.o
-				$(CC) -o bin/raptor obj/main.o $(LDFLAGS)
+raptor: main.o Stop.o Route.o Network.o Position.o
+				$(CC) -o bin/raptor obj/Route.o obj/Network.o obj/Position.o obj/Stop.o obj/main.o $(LDFLAGS)
+
+test: test.o Stop.o
+				$(CC) -o bin/test obj/test.o obj/Stop.o $(LDFLAGS)
 
 %.o: sources/%.cpp
 				$(CC) -o obj/$@ -c $< $(CFLAGS)
