--- a/Raptor/Makefile
+++ b/Raptor/Makefile
@@ -1,16 +1,16 @@
 CC=g++
-CFLAGS= -std=c++11 -Wall -O
+CFLAGS= -std=c++11 -Wall -O -g
 LDFLAGS=
 EXEC=raptor
 
 
 all: mkdir $(EXEC)
 
-raptor: main.o Stop.o Route.o Network.o Position.o
-				$(CC) -o bin/raptor obj/Route.o obj/Network.o obj/Position.o obj/Stop.o obj/main.o $(LDFLAGS)
+raptor: main.o Stop.o Route.o Network.o Position.o Bag.o Journey.o Label.o
+				$(CC) -o bin/raptor obj/Bag.o obj/Label.o obj/Journey.o obj/Route.o obj/Network.o obj/Position.o obj/Stop.o obj/main.o $(LDFLAGS)
 
-test: test.o Stop.o
-				$(CC) -o bin/test obj/test.o obj/Stop.o $(LDFLAGS)
+test: test.o Bag.o Journey.o Label.o
+				$(CC) -o bin/test obj/test.o obj/Bag.o obj/Label.o obj/Journey.o  $(LDFLAGS)
 
 %.o: sources/%.cpp
 				$(CC) -o obj/$@ -c $< $(CFLAGS)
