--- a/Raptor/Makefile
+++ b/Raptor/Makefile
@@ -1,13 +1,16 @@
 CC=g++
-CFLAGS= -std=c++11 -Wall -O
+CFLAGS= -std=c++11 -Wall -O -g
 LDFLAGS=
 EXEC=raptor
 
 
 all: mkdir $(EXEC)
 
-raptor: main.o
-				$(CC) -o bin/raptor obj/main.o $(LDFLAGS)
+raptor: main.o Stop.o Route.o Network.o Position.o Cost.o Bag.o RouteInfo.o Label.o Bags.o
+				$(CC) -o bin/raptor obj/Bag.o obj/Bags.o obj/Cost.o obj/Label.o obj/RouteInfo.o obj/Route.o obj/Network.o obj/Position.o obj/Stop.o obj/main.o $(LDFLAGS)
+
+test: test.o Bag.o Label.o
+				$(CC) -o bin/test obj/test.o obj/Bag.o obj/Label.o $(LDFLAGS)
 
 %.o: sources/%.cpp
 				$(CC) -o obj/$@ -c $< $(CFLAGS)
@@ -20,6 +23,3 @@ clean:
 
 clear: clean
 			  rm -f bin/*
-
-test:
-			$(CC) -o bin/test sources/test.cpp
